Support for Schema 0.5